@@ -6,7 +6,8 @@
     <h1>Alfredo, Java HTTP SPNEGO - Documentation Sets</h1>
 
     <ul>
-        <li><a href="./0.1.2/index.html">Alfredo 0.1.2</a> (latest)</li>
+        <li><a href="./0.1.3/index.html">Alfredo 0.1.3</a> (latest)</li>
+        <li><a href="./0.1.2/index.html">Alfredo 0.1.2</a></li>
         <li><a href="./0.1.1/index.html">Alfredo 0.1.1</a></li>
         <li><a href="./0.1.0/index.html">Alfredo 0.1.0</a></li>
     </ul>
