@@ -1,5 +1,6 @@
 -- Alfredo 0.1.3 release
 
+- Adding support for configuration values for domain and path in the authentication HTTP cookie
 - Adding to release documentation with checklist of things to take care, updating missed change in README.txt
 
 -- Alfredo 0.1.2 release
